--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <title>Homepage</title>
+    <title>{% block title %}Mohit Boards{% endblock %}</title>
 </head>
 <body>
     <div class="container">
@@ -20,7 +20,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a target="_blank" class="nav-link" href="https://github.com/Mohitb07/mohitboard">GitHub</a>
+              <a target="_blank" rel="noopener noreferrer" class="nav-link" href="https://github.com/Mohitb07/mohitboard">GitHub</a>
             </li>
           </ul>
         </div>
@@ -30,7 +30,7 @@
     <header class="heading">
         <h1>Welcome to Mohit Boards</h1>
     </header>
-    <div id="content" class="para">A place where user can discuss about various topics of their choice.</div>
+    <div id="content" class="para">A place where users can discuss about various topics of their choices.</div>
     <a href="#section" class="btn extra">Let's go</a>
     </div>
     <div id="section" class="image-container container-fluid">
@@ -44,11 +44,11 @@
 
     <footer>
         <div class="social container">
-          <a href="https://www.facebook.com/mohit.bisht.1903" target="_blank"><ion-icon name="logo-facebook" class="pr-2"></ion-icon></a>
-          <a target="_blank" href="https://www.github.com/Mohitb07"><ion-icon name="logo-github" class="pr-2"></ion-icon></a>
-          <a target="_blank" href="https://www.instagram.com/mohitbisht1903"><ion-icon name="logo-instagram" class="pr-2"></ion-icon></a>
-          <a target="_blank" href="https://www.linkedin.com/in/mohit-bisht-b602511b3/"><ion-icon name="logo-linkedin" class="pr-2"></ion-icon></a>
-          <a href="https://www.twitter.com/Mohitb07" target="_blank"><ion-icon name="logo-twitter" class="pr-2"></ion-icon></a>
+          <a href="https://www.facebook.com/mohit.bisht.1903" target="_blank" rel="noopener noreferrer"><ion-icon name="logo-facebook" class="pr-2"></ion-icon></a>
+          <a target="_blank" href="https://www.github.com/Mohitb07" rel="noopener noreferrer"><ion-icon name="logo-github" class="pr-2"></ion-icon></a>
+          <a target="_blank" href="https://www.instagram.com/mohitbisht1903" rel="noopener noreferrer"><ion-icon name="logo-instagram" class="pr-2"></ion-icon></a>
+          <a target="_blank" href="https://www.linkedin.com/in/mohit-bisht-b602511b3/" rel="noopener noreferrer"><ion-icon name="logo-linkedin" class="pr-2"></ion-icon></a>
+          <a href="https://www.twitter.com/Mohitb07" target="_blank" rel="noopener noreferrer"><ion-icon name="logo-twitter" class="pr-2"></ion-icon></a>
         </div>
         <div class="footer-menu text-center container">
             <a href="">About</a>
